物流返回按钮

--- a/kankan/pages/main/logisticslist.html
+++ b/kankan/pages/main/logisticslist.html
@@ -22,10 +22,9 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<!--<a class="mui-icon-back mui-action-back mui-icon mui-icon-left-nav mui-pull-left">
-				<font size="4" id="goback">
-					<font size="4">
-			</a>-->
+			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left">
+				<font size="3" class="lang" data-locale="back"></font>
+			</a>
 			<!--<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"><font size="3" class="lang" data-locale="back"></font></a>-->
 			<h1 class="mui-title lang" data-locale="logistic"></h1>
 		</header>
