修改检索页面输入框无法输入文本的问题

--- a/kankan/pages/main/search.html
+++ b/kankan/pages/main/search.html
@@ -20,8 +20,7 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav"></a>
-			<a class="lang" data-locale="back"></a>
-			<input id="search"></input>
+			<input id="search" type="text" class="mui-input-clear" />
 			<a class="mui-icon mui-icon-search mui-pull-right"></a>
 		</header>
 	</body>
