--- a/kankan/pages/main/products/product_want_to_buy.html
+++ b/kankan/pages/main/products/product_want_to_buy.html
@@ -104,6 +104,10 @@ function publishs() {
 			Log.d("success");
 			alert(TextMessage.pro_logininfo);
 			location.reload();
+			mui.plusReady(function() {
+				var mainpage=plus.webview.getLaunchWebview();
+				 mui.fire(mainpage,'gohome');
+			});
 		},
 		ng: function(data) {
 			Log.d(data);
