--- a/kankan/pages/main/products/productslist.html
+++ b/kankan/pages/main/products/productslist.html
@@ -139,20 +139,20 @@
 					var comdityimage = ucommodityinfo.commodity_photo_url;
 					var realwidth=ucommodityinfo.comm_img_width;
 					var realheight=ucommodityinfo.comm_img_height;
-					var toppx=0;
+					var leftpx=0;
 					var oribi=realheight/realwidth;
-					var showheight=imgwidth*oribi;
-					var cha1=showheight-120;
+					var showwidth=130/oribi;
+					var cha1=showwidth-imgwidth;
 					if(cha1>0){
-						toppx=cha1/2;
+						leftpx=cha1/2;
 					}
 					if(comdityimage==""){
 						comdityimage="./../../images/nopic.jpg";
 					}
 					var html = new Util.StringBuilder();
-					html.append('<li class="mui-table-view-cell mui-media mui-col-xs-4 detail">')
+					html.append('<li class="mui-table-view-cell mui-media mui-col-xs-4 detail ka_imgoption2">')
 						.appendFormat('<a href="detail.html" id="{0}">', commodityid)
-						.appendFormat('<div class="ka_imgoption2"><img class="mui-media-object" src="{0}" style="height: auto;margin-top:-'+toppx+'px;vertical-align: middle;" onerror="this.src='+"'../../../images/nopic.jpg'"+'"></div>', comdityimage)
+						.appendFormat('<img class="mui-media-object" src="{0}" style="height: 130px;width:auto;vertical-align: middle;" onerror="this.src='+"'../../../images/nopic.jpg'"+'">', comdityimage)
 						.append('</a>')
 						.append('</li>');
 					$(".comditylists").append(html.toString());
