用户页面昵称显示

--- a/kankan/pages/main/user/user.html
+++ b/kankan/pages/main/user/user.html
@@ -524,7 +524,7 @@
 			$(".address").html(address);
 			$("#nickname").val(unick_name);
 			$(".point").html(user_point);
-			$(".maintitle").html(uname);
+			$(".maintitle").html(unick_name);
 			$("#introduce").val(uintroduce);
 			$(".ticknum").html(uticknum);
 			var language=results.data.talk_flag;
