用户列表和首页商品图片细节调整

--- a/kankan/pages/main/pullrefresh_with_tab.html
+++ b/kankan/pages/main/pullrefresh_with_tab.html
@@ -825,12 +825,16 @@
 						data.forEach(function(item) {
 							var heightim = item.img_flag.height;
 							var widthim = item.img_flag.width;
-							if(heightim > widthim) {
-								var orginbi = heightim / widthim;
-								var actuheight = imgwidth * orginbi;
-								var heicha = actuheight - 160;
+							
+							var orginbi = heightim / widthim;
+							var actuheight = imgwidth * orginbi;
+							var heicha = actuheight - 160;
+							console.log("heicha"+heicha);
+							if(heicha > 0) {
 								var toppx = heicha / 2;
 								stylimg = "margin-top:-" + toppx + "px;";
+							}else{
+								stylimg="";
 							}
 							li = document.createElement('li');
 							li.className = 'mui-table-view-cell mui-col-sm-6 mui-col-xs-6';
