--- a/kankan/pages/main/user/user.html
+++ b/kankan/pages/main/user/user.html
@@ -551,6 +551,8 @@
 				var cha1=showheight-72;
 				if(cha1>0){
 					toppx=cha1/2;
+				}else{
+					toppx=0;
 				}
 				
 				exhibit_html+='<li class="user-goods-grid codedite">';
@@ -583,6 +585,8 @@
 				var cha2=showheightpra-72;
 				if(cha2>0){
 					toppxpra=cha2/2;
+				}else{
+					toppxpra=0;
 				}
 				praise_html+='<li class="user-goods-grid detail">';
 				praise_html+='<a id="'+praisepid+'" href="#">';
