添加判断条件

--- a/kankan/pages/main/products/productslist.html
+++ b/kankan/pages/main/products/productslist.html
@@ -145,6 +145,8 @@
 					var cha1=showwidth-imgwidth;
 					if(cha1>0){
 						leftpx=cha1/2;
+					}else{
+						leftpx=0;
 					}
 					if(comdityimage==""){
 						comdityimage="./../../images/nopic.jpg";
