--- a/kankan/pages/main/products/request.html
+++ b/kankan/pages/main/products/request.html
@@ -108,6 +108,8 @@
 					var cha1=showheight-100;
 					if(cha1>0){
 						toppx=cha1/2;
+					}else{
+						toppx=0;
 					}
 					var html = new Util.StringBuilder();
 					html.appendFormat('<li class="mui-table-view-cell mui-media mui-col-xs-4 translate"><a id="{0}" href="#">',transid)
