--- a/kankan/pages/main/products/request.html
+++ b/kankan/pages/main/products/request.html
@@ -163,7 +163,7 @@
 							otoppx=cha2/2;
 						}
 						html2 += '<li class="mui-table-view-cell mui-media mui-col-xs-4 translate"><a id="'+otransid+'" href="#">';
-						html2 += '<div class="ka_imgoption"><img class="mui-media-object" src="'+ocomm_img+'" style="height: auto;width:100%;margin-top:-'+toppx+'px;" onerror="this.src='+"'../../../images/nopic.jpg'"+'"></div>';
+						html2 += '<div class="ka_imgoption"><img class="mui-media-object" src="'+ocomm_img+'" style="height: auto;width:100%;margin-top:-'+otoppx+'px;" onerror="this.src='+"'../../../images/nopic.jpg'"+'"></div>';
 						html2 += '<div class="mui-media-body">'+ocomm_name+'</div>';
 						html2 += '</a><div class="';
 						if(otrans_type=="0"){
