--- a/kankan/pages/transaction/request_item.html
+++ b/kankan/pages/transaction/request_item.html
@@ -115,7 +115,7 @@
 
 				for(var r in request_user_arr) {
 					goods_list += '<li class="mui-table-view-cell mui-media mui-col-xs-4 detail" id="' + request_user_arr[r].commodity_id + '">';
-					goods_list += '<img class="" width="30%"  height="98px;" src="' + request_user_arr[r].img_flg + '">';
+					goods_list += '<img class="" width="30%"  height="98px;" src="' + request_user_arr[r].img_flg + '" onerror="this.src=' + "'../../images/nopic.jpg'" + '">';
 					goods_list += '</li>';
 				}
 				$(".goods-list").html(goods_list);
