--- a/kankan/pages/transaction/select_item.html
+++ b/kankan/pages/transaction/select_item.html
@@ -117,7 +117,7 @@
 							for(var gds in comm_info) {
 								goods_list += '<li class="mui-table-view-cell mui-media mui-col-xs-4 detail" >';
 								goods_list += '<label  for="' + comm_info[gds].commodity_id + '">';
-								goods_list += '<img class="" width="30%"  height="98px;" src="' + comm_info[gds].img_flg + '">';
+								goods_list += '<img class="" width="30%"  height="98px;" src="' + comm_info[gds].img_flg + '" onerror="this.src=' + "'../../images/nopic.jpg'" + '">';
 								goods_list += '<input  style="float:right;position: fixed;margin-left:-13px;" name="commodity_id" value="' + comm_info[gds].commodity_id + '" type="checkbox" >';
 								goods_list += '</label>';
 								goods_list += '</li>';
