用户页面昵称显示

--- a/kankan/pages/main/user/user.html
+++ b/kankan/pages/main/user/user.html
@@ -522,9 +522,9 @@
 			$(".normal").html(unormalnum);
 			$(".bad").html(badnum);
 			$(".address").html(address);
-			$("#nickname").val(unick_name);
+			$("#nickname").val(uname);
 			$(".point").html(user_point);
-			$(".maintitle").html(unick_name);
+			$(".maintitle").html(uname);
 			$("#introduce").val(uintroduce);
 			$(".ticknum").html(uticknum);
 			var language=results.data.talk_flag;
