--- a/kankan/pages/main/home.html
+++ b/kankan/pages/main/home.html
@@ -7,181 +7,245 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
-		<link rel="stylesheet" href="../../css/mui.min.css">
-		<link rel="stylesheet" href="../../css/icons-extra.css">
+		<link rel="stylesheet" href="../../css/mui.min.css" />
 		<style>
 			html,
 			body {
 				background-color: #efeff4;
 			}
 			
-			.title {
-				margin: 20px 15px 10px;
-				color: #6d6d72;
-				font-size: 15px;
+			.mui-bar~.mui-content .mui-fullscreen {
+				top: 44px;
+				height: auto;
 			}
 			
-			a#user img {
-				width: 35px;
-				height: 35px;
-				border-radius: 50%;
-				margin-top: -0.2em;
-			}
-			
-			header a.mui-icon-extra-notice {
-				margin-top: 0.5em;
-				margin-right: 0.25em;
-			}
-			
-			header a.mui-icon-search {
-				width: 60px;
-			}
-			
-			i {
-				display: block;
-				background: #f00;
-				border-radius: 50%;
-				width: 5px;
-				height: 5px;
-				top: 0px;
-				right: 0px;
+			.mui-pull-top-tips {
 				position: absolute;
+				top: -20px;
+				left: 50%;
+				margin-left: -25px;
+				width: 40px;
+				height: 40px;
+				border-radius: 100%;
+				z-index: 1;
+			}
+			
+			.mui-bar~.mui-pull-top-tips {
+				top: 24px;
+			}
+			
+			.mui-pull-top-wrapper {
+				width: 42px;
+				height: 42px;
+				display: block;
+				text-align: center;
+				background-color: #efeff4;
+				border: 1px solid #ddd;
+				border-radius: 25px;
+				background-clip: padding-box;
+				box-shadow: 0 4px 10px #bbb;
+				overflow: hidden;
+			}
+			
+			.mui-pull-top-tips.mui-transitioning {
+				-webkit-transition-duration: 200ms;
+				transition-duration: 200ms;
+			}
+			
+			.mui-pull-top-tips .mui-pull-loading {
+				/*-webkit-backface-visibility: hidden;
+				-webkit-transition-duration: 400ms;
+				transition-duration: 400ms;*/
+				margin: 0;
+			}
+			
+			.mui-pull-top-wrapper .mui-icon,
+			.mui-pull-top-wrapper .mui-spinner {
+				margin-top: 7px;
+			}
+			
+			.mui-pull-top-wrapper .mui-icon.mui-reverse {
+				/*-webkit-transform: rotate(180deg) translateZ(0);*/
+			}
+			
+			.mui-pull-bottom-tips {
+				text-align: center;
+				background-color: #efeff4;
+				font-size: 15px;
+				line-height: 40px;
+				color: #777;
+			}
+			
+			.mui-pull-top-canvas {
+				overflow: hidden;
+				background-color: #fafafa;
+				border-radius: 40px;
+				box-shadow: 0 4px 10px #bbb;
+				width: 40px;
+				height: 40px;
+				margin: 0 auto;
+			}
+			
+			.mui-pull-top-canvas canvas {
+				width: 40px;
+			}
+			
+			.mui-slider-indicator.mui-segmented-control {
+				background-color: #efeff4;
 			}
 		</style>
 	</head>
 
 	<body>
+		<!--
 		<header class="mui-bar mui-bar-nav">
-			<a class="mui-icon mui-pull-left" id="user">
-				<img src="../../images/default.jpg" />
-			</a>
-			<h1 id="title" class="mui-title lang" data-locale="app_name"></h1>
-			<a style="position:relative;" class="mui-icon-extra mui-icon-extra-notice mui-pull-right" id="offCanvasShow">
-				<i></i>
-			</a>
-			<a class="mui-icon mui-icon-search mui-pull-right"></a>
+			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+			<h1 class="mui-title">顶部选项卡-可左右拖动(webview)</h1>
 		</header>
+		-->
 		<div class="mui-content">
+			<div id="slider" class="mui-slider mui-fullscreen">
+				<div id="sliderSegmentedControl" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
+					<div class="mui-scroll">
+						<a class="mui-control-item mui-active" href="#item1mobile" data-wid="category/tab-top-subpage-1.html">
+							すべて
+						</a>
+						<a class="mui-control-item" href="#item2mobile" data-wid="category/tab-top-subpage-2.html">
+							求购
+						</a>
+						<a class="mui-control-item" href="#item3mobile" data-wid="category/tab-top-subpage-3.html">
+							レディース
+						</a>
+						<a class="mui-control-item" href="#item4mobile" data-wid="category/tab-top-subpage-4.html">
+							メンズ
+						</a>
+						<a class="mui-control-item" href="#item5mobile" data-wid="category/tab-top-subpage-5.html">
+							ベビー・キッズ
+						</a>
+						<a class="mui-control-item" href="#item6mobile" data-wid="category/tab-top-subpage-6.html">
+							インテリア・住まい・小物
+						</a>
+						<a class="mui-control-item" href="#item6mobile" data-wid="category/tab-top-subpage-7.html">
+							エンタメ・ホビー
+						</a>
+						<a class="mui-control-item" href="#item6mobile" data-wid="category/tab-top-subpage-8.html">
+							コスメ・香水・美容
+						</a>
+						<a class="mui-control-item" href="#item6mobile" data-wid="category/tab-top-subpage-9.html">
+							家電・スマホ・カメラ
+						</a>
+						<a class="mui-control-item" href="#item6mobile" data-wid="category/tab-top-subpage-10.html">
+							スポーツ・レジャー
+						</a>
+						<a class="mui-control-item" href="#item6mobile" data-wid="category/tab-top-subpage-11.html">
+							ハンドメイド
+						</a>
+						<a class="mui-control-item" href="#item6mobile" data-wid="category/tab-top-subpage-12.html">
+							チケット
+						</a>
+						<a class="mui-control-item" href="#item6mobile" data-wid="category/tab-top-subpage-13.html">
+							自動車・オートバイ
+						</a>
+						<a class="mui-control-item" href="#item6mobile" data-wid="category/tab-top-subpage-14.html">
+							その他
+						</a>
+					</div>
+				</div>
+
+			</div>
 		</div>
-	</body>
-	<script src="../../js/mui.min.js"></script>
-	<script src="../../js/jquery-3.2.0.min.js"></script>
-	<script src="../../js/language.js"></script>
-	<script src="../../js/common.js"></script>
-	<script type="text/javascript" charset="UTF-8">
-		window.addEventListener("updateUserImgEvent", function(event) {
-			if(DEBUG) {
-				alert("updateUserImgEvent[imgURL=" + event.detail.userImgURL + "]");
-			}
-			$('#user img').attr('src', event.detail.userImgURL);
-		});
-
-		window.addEventListener("updateNoticeStatusEvent", function(event) {
-			if(DEBUG) {
-				alert("updateNoticeStatusEvent[flg=" + event.detail.flg + "]");
-			}
-			if(event.detail.flg === "1") {
-				$('i').show();
-			} else {
-				$('i').hide();
-			}
-		});
-
-		mui("header").on("tap", "#offCanvasShow", function() {
-			var isLogin = plus.storage.getItem("LoginFlag");
-			if(!isLogin) {
-				plus.nativeUI.confirm(TextMessage.test, function(e) {
-					if(e.index != 0) {
-						mui.openWindow({
-							id: "login",
-							url: "../login/login.html",
-							waiting: {
-								autoShow: false
-							},
-							show: {
-								duration: 200
-							}
-						});
-					}
-				}, TextMessage.sharetitle, [TextMessage.cancel, TextMessage.yes]);
-			} else {
-				mui.openWindow({
-					id: 'news',
-					url: 'news.html',
-				});
-			}
-		});
-		(function(mui, doc) {
-			mui.init({
-				gestureConfig: {
-					doubletap: true
-				},
-				preloadPages: [{
-					id: 'search',
-					url: 'search.html',
-					show: {
-						aniShow: 'slide-in-bottom',
-						duration: 200
-					},
-					waiting: {
-						autoShow: false
-					}
-				}],
-				preloadLimit: 3,
-				subpages: [{
-					url: 'pullrefresh_with_tab.html',
-					id: 'pullrefresh_with_tab',
-					styles: {
-						top: '45px',
-						bottom: '0px'
-					}
-				}]
+		<script type="text/javascript" src="../../js/mui.min.js"></script>
+		<script type="text/javascript" src="../../js/webviewGroup.js"></script>
+		<script>
+			mui.init();
+			mui('.mui-scroll-wrapper').scroll({
+				indicators: false,
+				bounce: false,
+				scrollY: false,
+				scrollX: true
 			});
-
-			var searchBtn = $('.mui-icon-search').first();
-			searchBtn.click(function() {
-				mui.openWindow({
-					id: 'search',
-					url: 'search.html',
-					show: {
-						aniShow: 'slide-in-bottom',
-						duration: 200
-					},
-					waiting: {
-						autoShow: false
-					}
-				});
-			});
-			network = false;
 			mui.plusReady(function() {
-				Log.i("home.html plusReady...");
-
-				if(plus.networkinfo.getCurrentType() != plus.networkinfo.CONNECTION_NONE) {
-					network = true;
-				}
-
-				var userPhoto = document.getElementById("user");
-				userPhoto.addEventListener('click', function(event) {
-					console.log("userPhoto clicked.");
-					if(!network) {
-						console.log(TextMessage.not_network);
-						mui.toast(TextMessage.not_network);
-					}
-					var isLogin = plus.storage.getItem("LoginFlag");
-					if(isLogin == "isLogin") {
-						mui.openWindow({
-							id: "user",
-							url: "user/user.html",
-							waiting: {
-								autoShow: false
-							}
-						});
-					} else {
-						mui.fire(plus.webview.getWebviewById('pullrefresh_with_tab'), 'showMenu', {});
+				var group = new webviewGroup("home.html", {
+					items: [{
+						id: "tab-top-subpage-1.html",
+						url: "category/tab-top-subpage-1.html",
+						extras: {}
+					}, {
+						id: "tab-top-subpage-2.html",
+						url: "category/tab-top-subpage-2.html",
+						extras: {}
+					}, {
+						id: "tab-top-subpage-3.html",
+						url: "category/tab-top-subpage-3.html",
+						extras: {}
+					}, {
+						id: "tab-top-subpage-4.html",
+						url: "category/tab-top-subpage-4.html",
+						extras: {}
+					}, {
+						id: "tab-top-subpage-5.html",
+						url: "category/tab-top-subpage-5.html",
+						extras: {}
+					}, {
+						id: "tab-top-subpage-6.html",
+						url: "category/tab-top-subpage-6.html",
+						extras: {}
+					}, {
+						id: "tab-top-subpage-7.html",
+						url: "category/tab-top-subpage-7.html",
+						extras: {}
+					}, {
+						id: "tab-top-subpage-8.html",
+						url: "category/tab-top-subpage-8.html",
+						extras: {}
+					}, {
+						id: "tab-top-subpage-9.html",
+						url: "category/tab-top-subpage-9.html",
+						extras: {}
+					}, {
+						id: "tab-top-subpage-10.html",
+						url: "category/tab-top-subpage-10.html",
+						extras: {}
+					}, {
+						id: "tab-top-subpage-11.html",
+						url: "category/tab-top-subpage-11.html",
+						extras: {}
+					}, {
+						id: "tab-top-subpage-12.html",
+						url: "category/tab-top-subpage-12.html",
+						extras: {}
+					}, {
+						id: "tab-top-subpage-13.html",
+						url: "category/tab-top-subpage-13.html",
+						extras: {}
+					}, {
+						id: "tab-top-subpage-14.html",
+						url: "category/tab-top-subpage-14.html",
+						extras: {}
+					}],
+					onChange: function(obj) {
+						var c = document.querySelector(".mui-control-item.mui-active");
+						if(c) {
+							c.classList.remove("mui-active");
+						}
+						var activeTab = document.querySelector(".mui-scroll .mui-control-item:nth-child(" + (parseInt(obj.index) + 1) + ")");
+						activeTab.classList.add("mui-active");
 					}
 				});
+				mui(".mui-scroll").on("tap", ".mui-control-item", function(e) {
+					var wid = this.getAttribute("data-wid");
+					group.switchTab(wid);
+				});
+				document.querySelector('.mui-scroll-wrapper').addEventListener('scroll', function(e) {
+					var curscroll = e.detail.x;
+					console.log("curscroll is " + curscroll);
+				});
 			});
-		})(mui, document);
-	</script>
+			mui.back = function() {
+				var _self = plus.webview.currentWebview();
+				_self.close("auto");
+			}
+		</script>
+	</body>
 
 </html>
