--- a/kankan/pages/main/main.html
+++ b/kankan/pages/main/main.html
@@ -3,12 +3,11 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title>main</title>
+		<title>Hello MUI</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
-		<link rel="stylesheet" href="../../css/mui.min.css">
-		<link rel="stylesheet" href="../../css/icons-extra.css">
+		<link rel="stylesheet" href="../../css/mui.min.css" />
 		<style>
 			html,
 			body {
@@ -18,6 +17,10 @@
 	</head>
 
 	<body>
+		<header class="mui-bar mui-bar-nav">
+			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+			<h1 id="title" class="mui-title lang" data-locale="tab_1"></h1>
+		</header>
 		<nav class="mui-bar mui-bar-tab">
 			<a id="defaultTab" class="mui-tab-item mui-active" href="home.html">
 				<span class="mui-icon mui-icon-home"></span>
@@ -36,102 +39,70 @@
 				<span class="mui-tab-label lang" data-locale="tab_4"></span>
 			</a>
 		</nav>
-		<script src="../../js/mui.min.js"></script>
+		<script type="text/javascript" src="../../js/mui.min.js" ></script>
 		<script type="text/javascript" src="../../js/jquery-3.2.0.min.js"></script>
 		<script type="text/javascript" src="../../js/language.js"></script>
-		<script type="text/javascript" src="../../js/common.js"></script>
 		<script type="text/javascript" charset="utf-8">
-			//			if(!mui.os.android) {
-			//				//The overall slide temporarily support android phone, because the two pages of mobile animation, can not guarantee synchronization;
-			//				document.getElementById("move-togger").classList.remove('mui-hidden');
-			//				var spans = document.querySelectorAll('.android-only');
-			//				for(var i = 0, len = spans.length; i < len; i++) {
-			//					spans[i].style.display = "none";
-			//				}
-			//			}
-			//mui initialization
-			mui.init({
-				swipeBack: false
-				//beforeback: back
-			});
-
+			 //mui初始化
+			mui.init();
 			var subpages = ['home.html', 'products/product_login.html', 'products/product_want_to_buy.html', 'logisticslist.html'];
 			var subpage_style = {
-				top: '0px',
+				top: '45px',
 				bottom: '51px'
 			};
-
+			
 			var aniShow = {};
-
-			//Create subpage, first tab page display, others are hidden;
+			
+			 //创建子页面，首个选项卡页面显示，其它均隐藏；
 			mui.plusReady(function() {
-				plus.webview.create("products/request.html", "request.html");
-				Log.i("main.html plusReady...");
 				var self = plus.webview.currentWebview();
-				for(var i = 0; i < 4; i++) {
+				for (var i = 0; i < 4; i++) {
 					var temp = {};
 					var sub = plus.webview.create(subpages[i], subpages[i], subpage_style);
-					if(i > 0) {
+					if (i > 0) {
 						sub.hide();
-					} else {
+					}else{
 						temp[subpages[i]] = "true";
-						mui.extend(aniShow, temp);
+						mui.extend(aniShow,temp);
 					}
 					self.append(sub);
 				}
-				main = plus.webview.currentWebview();
 			});
-
-			//Current activation option
+			 //当前激活选项
 			var activeTab = subpages[0];
 			var title = document.getElementById("title");
-			//Tab click event
+			 //选项卡点击事件
 			mui('.mui-bar-tab').on('tap', 'a', function(e) {
 				var targetTab = this.getAttribute('href');
-				var isLogin = plus.storage.getItem("LoginFlag");
-				if(isLogin != "isLogin") {
-					plus.nativeUI.alert(TextMessage.test, function(e) {
-						mui.openWindow({
-							id: "login",
-							url: "../login/login.html",
-							waiting: {
-								autoShow: false
-							},
-							show: {
-								duration: 200
-							}
-						});
-					}, TextMessage.sharetitle, TextMessage.yes);
-				}
-				if(targetTab == activeTab) {
+				if (targetTab == activeTab) {
 					return;
 				}
-				//Replace the title
-				//title.innerHTML = this.querySelector('.mui-tab-label').innerHTML;
-				//The Target tab is displayed
-				//If the iOS platform or non-first display, it is displayed directly
-				if(mui.os.ios || aniShow[targetTab]) {
+				//更换标题
+				title.innerHTML = this.querySelector('.mui-tab-label').innerHTML;
+				//显示目标选项卡
+				//若为iOS平台或非首次显示，则直接显示
+				if(mui.os.ios||aniShow[targetTab]){
 					plus.webview.show(targetTab);
-				} else {
-					//Otherwise, use the fade-in animation and save the variable
+				}else{
+					//否则，使用fade-in动画，且保存变量
 					var temp = {};
 					temp[targetTab] = "true";
-					mui.extend(aniShow, temp);
-					plus.webview.show(targetTab, "fade-in", 300);
+					mui.extend(aniShow,temp);
+					plus.webview.show(targetTab,"fade-in",300);
 				}
-				//Hide the current
+				//隐藏当前;
 				plus.webview.hide(activeTab);
-				//Change the currently active tab
+				//更改当前活跃的选项卡
 				activeTab = targetTab;
 			});
-			//Custom Events, Simulation Click "Home Tab"
+			 //自定义事件，模拟点击“首页选项卡”
 			document.addEventListener('gohome', function() {
 				var defaultTab = document.getElementById("defaultTab");
-				//Simulation home page click
+				//模拟首页点击
 				mui.trigger(defaultTab, 'tap');
-				//The Toggle tab is highlighted
+				//切换选项卡高亮
 				var current = document.querySelector(".mui-bar-tab>.mui-tab-item.mui-active");
-				if(defaultTab !== current) {
+				if (defaultTab !== current) {
 					current.classList.remove('mui-active');
 					defaultTab.classList.add('mui-active');
 				}
