--- a/kankan/pages/main/home.html
+++ b/kankan/pages/main/home.html
@@ -80,7 +80,7 @@
 			if(DEBUG) {
 				alert("updateNoticeStatusEvent[flg=" + event.detail.flg + "]");
 			}
-			if(event.detail.flg === "1") {
+			if(event.detail.flg == 1) {
 				$('i').show();
 			} else {
 				$('i').hide();
