--- a/kankan/pages/main/pullrefresh_with_tab.html
+++ b/kankan/pages/main/pullrefresh_with_tab.html
@@ -799,8 +799,8 @@
 						if(typeof(plus) == "undefined") {
 							return;
 						}
-						var homePage = plus.webview.getWebviewById('home.html');
-						mui.fire(homePage, 'updateNoticeStatusEvent', {
+						var homePage2 = plus.webview.getWebviewById('home.html');
+						mui.fire(homePage2, 'updateNoticeStatusEvent', {
 							flg: flg
 						});
 					}
