--- a/kankan/pages/main/news.html
+++ b/kankan/pages/main/news.html
@@ -27,7 +27,7 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-		    <h1 class="mui-title">站内信一览</h1>
+		    <h1 class="mui-title lang" data-locale="messagetitle">站内信一览</h1>
 		</header>
 		<div id="pullrefresh" class="mui-content mui-scroll-wrapper">
   			<div class="mui-scroll">
